fix platformSelector text wrapping

--- a/src/components/platformSelector/style.module.scss
+++ b/src/components/platformSelector/style.module.scss
@@ -1,6 +1,7 @@
 .select {
   display: flex;
-  height: 2.5rem;
+  padding: 0.5rem;
+  overflow-wrap: break-word;
   align-items: center;
   justify-content: center;
   gap: 0.25rem;
@@ -28,7 +29,6 @@
 
 @media (min-width: 640px) {
   .select {
-    height: 2.25rem;
     font-size: 15px;
   }
 }
@@ -59,6 +59,7 @@
 .popover input {
   width: 100%;
   border-color: transparent;
+  height: 2.5rem;
 }
 
 .popover input:focus {
@@ -74,7 +75,6 @@
 }
 
 .combobox {
-  height: 2.5rem;
   appearance: none;
   border-radius: 0.25rem;
   background-color: hsl(204 4% 0% / 0.05);
@@ -91,7 +91,6 @@
 
 @media (min-width: 640px) {
   .combobox {
-    height: 2.25rem;
     font-size: 15px;
   }
 }
